[1.22] sync, rpki-client 6.8p0 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 6.7p1 вышла 27 июля 2020 года.
+Портированная версия rpki-client 6.8p0 вышла 20 октября 2020 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -37,7 +37,7 @@
 
 <ul>
 	<li>OpenBSD
-	<li>Linux (Debian 9, Debian 10)
+	<li>Linux (Alpine 3.12, Debian 9, Debian 10, Fedora 31, Fedora 32, Fedora 33, RHEL/CentOS 7, RHEL/CentOS 8)
 	<li>...
 </ul>
 
