[1.388] sync - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -190,8 +190,8 @@ Enter 'help' for information
 fdisk: 1>
 </pre>
 
-Помните, что <code>q</code> сохраняет изменения и выходит из программы, а <code>x</code>
-выходит без сохранения.
+Помните, что <code>quit</code> сохраняет изменения и выходит из программы,
+а <code>exit</code> выходит без сохранения.
 Это противоположно тому, к чему многие из нас привыкли. Также обратите внимание, что
 fdisk не предупреждает перед сохранением изменений.
 
