[1.23] sync, 6.8p1 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 6.8p0 вышла 20 октября 2020 года.
+Портированная версия rpki-client 6.8p1 вышла 12 ноября 2020 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
