--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,8 +38,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-6.8p0.txt">rpki-client 6.8p0</a>
-вышла 20 октября 2020 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-6.8p1.txt">rpki-client 6.8p1</a>
+вышла 12 ноября 2020 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
