Translated couple of para

--- a/powerpc64.html
+++ b/powerpc64.html
@@ -17,26 +17,26 @@ powerpc64
 
 <table><tr><td>
 <p>
-OpenBSD/powerpc64 runs on PowerNV machines using the IBM POWER9 processors.
+OpenBSD/powerpc64 работает на компьютере  PowerNV, использующем процессор IBM POWER9.
 
 <p>
-A mailing list dedicated to the OpenBSD/macppc and OpenBSD/powerpc64 ports is
-available at <a href="mailto:ppc@openbsd.org">ppc@openbsd.org</a>.
-To join the OpenBSD/macppc and OpenBSD/powerpc64 mailing list, send a message
-body of "<b>subscribe ppc</b>" to
+Список почтовой рассылки посвященный портам OpenBSD/macppc и OpenBSD/powerpc64 
+доступен по адресу <a href="mailto:ppc@openbsd.org">ppc@openbsd.org</a>
+Чтобы присоединиться к списку почтовой рассылки OpenBSD/macppc и OpenBSD/powerpc64
+отправьте сообщение c текстом "<b>subscribe ppc</b>" на адрес
 <a href="mailto:majordomo@openbsd.org">majordomo@openbsd.org</a>.
-Please be sure to check our <a href="mail.html">mailing list policy</a> before
-subscribing.
+Перед тем как отправить сообщение обязательно ознакомьтесь с нашими
+<a href="mail.html">правилами списка почтовой рассылки</a>.
 
 <p>
-The current port maintainer is Mark Kettenis
+Текущий сопровождающий порта &mdash; Mark Kettenis
 (<a href="mailto:kettenis@openbsd.org">kettenis@openbsd.org</a>).
-Others are definitely welcome to contribute!
+Другие, безусловно, могут внести свой вклад!
 </table>
 
 <hr>
 
-<h3 id="history"><strong>History:</strong></h3>
+<h3 id="history"><strong>История</strong></h3>
 
 <p>
 OpenBSD 6.8 was the first official release of OpenBSD/powerpc64.
