[1.78] sync, 6.8p1 - openntpd/index.html

--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -39,8 +39,8 @@
 </h2>
 
 <p id="callout">
-Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a>
-состоялся 30 октября 2017 года
+Релиз <a href="http://openntpd.org/txt/release-6.8p1.txt">OpenNTPD 6.8p1</a>
+состоялся 7 декабря 2020 года
 
 <p>
 OpenNTPD представляет из себя <strong>СВОБОДНУЮ</strong> и простую в
