--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.2.2-relnotes.txt">LibreSSL 3.2.2</a>
-вышла 18 октября 2020 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.2.3-relnotes.txt">LibreSSL 3.2.3</a>
+вышла 8 декабря 2020 года
     
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,8 +57,8 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.2.2.<br>
-Последним development релизом является 3.3.0<br>
+Последним stable релизом является 3.2.3.<br>
+Последним development релизом является 3.3.1<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
