[1.72] update links - stable.html

--- a/stable.html
+++ b/stable.html
@@ -26,7 +26,7 @@ h3, h4 {
 Стабильная ветка OpenBSD или -stable branch это одна из трех
 <a href="faq/faq5.html#Flavors">flavors</a>.
 Она состоит из исходников release и патчей для
-<a href="https://www.openbsd.org/errata.html">errata</a>.
+<a href="errata.html">errata</a>.
 Более детально:
 
 <ul>
@@ -45,7 +45,7 @@ branch из CVS и пересобрать систему.
 для обновления любых файлов, нуждающихся в исправлениях безопасности или
 надежности (security or reliability fixes), при помощи обновлений бинарников.
 Более подробную информацию можно найти
-<a href="https://www.openbsd.org/faq/faq10.html#Patches">здесь</a>.
+<a href="faq/faq10.html#Patches">здесь</a>.
 
 <h3 id="getting">Загрузка исходников -stable</h3>
 
