[1.65] update links to local files - faq/pf/config.html

--- a/faq/pf/config.html
+++ b/faq/pf/config.html
@@ -76,12 +76,12 @@ PF считывает свою конфигурацию из файла
     Пользовательские переменные, которые могут содержать IP-адреса, имена интерфейсов и т.д.
   <li><b><a href="tables.html">Таблицы:</a></b>
     Структура, используемая для хранения списков IP-адресов.
-  <li><b><a href="https://www.openbsd.org/faq/pf/options.html">Опции:</a></b>
+  <li><b><a href="options.html">Опции:</a></b>
     Различные опции контроля работы PF.
   <li><b><a href="https://www.openbsd.org/faq/pf/filter.html">Правила Фильтрации:</a></b>
     Разрешают выборочную фильтрацию или блокировку пакетов при их прохождении через любой из
     интерфейсов. Правилам фильтрации могут быть заданы параметры для указания
-  <a href="https://www.openbsd.org/faq/pf/nat.html">преобразования сетевых адресов</a> и
+  <a href="nat.html">преобразования сетевых адресов</a> и
   <a href="https://www.openbsd.org/faq/pf/rdr.html">перенаправления трафика</a>.
 </ul>
 
