[1.329] update link to local plat.html - faq/faq8.html

--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -43,7 +43,7 @@ FAQ - Общие вопросы
 <ul>
   <li><b>Загрузка в однопользовательском режиме.</b>
     Эта часть процесса различается для разных
-    <a href="https://www.openbsd.org/plat.html">платформ</a>.
+    <a href="../plat.html">платформ</a>.
     Для amd64 и i386, на
     <a href="faq14.html#BootAmd64">на втором этапе загрузки</a>
     есть пауза для введения параметров ядра.
