[1.45] update link to errata.html - openssh/report.html

--- a/openssh/report.html
+++ b/openssh/report.html
@@ -23,8 +23,7 @@
 проверьте следующее:
 
 <ol>
-<li>Имеются ли <a href="https://www.openbsd.org/errata.html">
-		патчи и исправления для OpenSSH.</a>
+<li>Имеются ли <a href="../errata.html">патчи и исправления для OpenSSH.</a>
 <li>Имеется ли более новая версия для <a href="openbsd.html">OpenBSD</a>
     или <a href="portable.html">портированная версия</a>, для вашей системы.
 <li>Список <a
