[1.545] sync: add link to 'Using a webcam' - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -178,6 +178,7 @@ XXX  -->
 <li><a href="https://www.openbsd.org/faq/faq13.html#default"    >Choosing the Default Audio Device</a>
 <li><a href="https://www.openbsd.org/faq/faq13.html#audioprob"  >Debugging Audio Problems</a>
 <li><a href="https://www.openbsd.org/faq/faq13.html#midi"       >Using MIDI Instruments</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#webcam"     >Using a webcam</a>
 </ul>
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
