--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -32,7 +32,7 @@ PF: Пакетный фильтр OpenBSD
 	<ul>
 	<li><a href="options.html"                             >Параметры работы фильтра</a>
 	<li><a href="anchors.html"                             >Anchors (привязанные правила)</a>
-	<li><a href="https://openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
+	<li><a href="pools.html"                               >Пулы адресов и балансировка нагрузки</a>
 	<li><a href="https://openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (политика фильтрации)</a>
 	</ul>
 <li>Дополнительные темы
