--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -117,7 +117,7 @@ boot> <b>boot -s</b>
 OpenBSD предполагает, что ваши аппаратные часы настроены в соответствии с UTC
 (Universal Coordinated Time), а не по местному времени. Это может причиной проблем при
 <a href="faq4.html#Multibooting">мультизагрузке</a>.
-Большинство других операционных ситем могут быть настроены по тому же принципу,
+Большинство других операционных систем могут быть настроены по тому же принципу,
 что и OpenBSD, чтобы избежать эту проблему.
 
 <p>
