[1.747] adding link to RU telegram channel - index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <ul>
 	<li><a href="ru-community/articles.html">Статьи</a>
 	<li><a href="https://webchat.freenode.net?channels=%23openbsd-russian">freenode IRC канал</a>
+	<li><a href="https://t.me/openbsd_ru">telegram канал</a>
 	<li><a href="https://vk.com/openbsd_hackers">Группа в VK</a>
 	<li><a href="https://github.com/openbsd-ru">Проект на GitHub</a>
 </ul>
