--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
 первоначально написанную для OpenBSD.
 
 <p>
-Информацию по поводу того как скачать OpenBSD
-можно найти на станице download.
-
+OpenBSD доступна для скачивания с нашей страницы загрузки.
+	
 <p>
 Последняя версия,
 <a href="https://www.openbsd.org/68.html">OpenBSD 6.8</a>,
