--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 первоначально написанную для OpenBSD.
 
 <p>
-OpenBSD доступна для скачивания с нашей страницы загрузки.
+OpenBSD доступна для скачивания с нашей страницы загрузок.
 	
 <p>
 Последняя версия,
