--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -187,9 +187,7 @@ boot> <b>boot hd1d:/bsd.rd</b>
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/octeon/miniroot68.img">octeon</a>]
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/miniroot68.img">sparc64</a>]
 <br>
-Это такой же образ, как и образ выше, но файлов, содержащих установочные компоненты,
-там нет. Они могут быть во время установки системы загруженны из сети или найдены на
-диске.
+Это такой же образ, как и выше, но без установочных компонент. Они загружаются из интернет или c локального диска.
 
 <p>
 <li>
@@ -203,7 +201,7 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <br>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
 <br>
-Содержит файлы с установочными компонентами.
+Содержит установочные компоненты.
 
 <p>
 <li>
@@ -215,7 +213,7 @@ ISO 9660 образ. Используется для создания устан
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/macppc/cd68.iso">macppc</a>]
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/cd68.iso">sparc64</a>]
 <br>
-Такой же образ как и образ выше, но без файлов с установочными компонентами.
+Такой же образ как и выше, но без установочных компонент.
 
 <p>
 <li>
