--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -312,7 +312,7 @@ GNU версия <code>dd</code> потребует <code>bs=1M</code> (обра
 
 <h2 id="Install">Выполнение простой установки</h2>
 
-Если вам необходимы иструкции и другая информация о процессе загрузки с того или
+Если вам необходимы инструкции и другая информация о процессе загрузки с того или
 иного устройства, загляните на страницу <a href="../plat.html">платформы</a>,
 там можно ознакомиться с особенностями для вашей машины.
 
