--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -228,8 +228,8 @@ ISO 9660 образ. Используется для создания устан
 Образы могут быть загружены с альтернативных <a href="../ftp.html">зеркал</a>.
 
 <p>
-Файл <code>SHA256</code>, содержащий checksums, находится в том же каталоге,
-что и установочные файлы, перечисленные выше. Вы можете проверить, что ни один из
+Файл <code>SHA256</code>, содержащий контрольные суммы, находится в том же каталоге,
+что и установочные файлы перечисленные выше. Вы можете проверить, что ни один из
 загруженных файлов не был искажен при скачивании, используя команду
 <a href="https://man.openbsd.org/sha256">sha256(1)</a>.
 
@@ -246,8 +246,8 @@ minirootXX.img: OK
 </pre>
 
 Однако это используется лишь для проверки <i>правильной загрузки</i> файлов по сети.
-Вы можете использовать <a href="https://man.openbsd.org/signify">signify(1)</a>
-и файл <code>SHA256.sig</code> для криптографической проверки загруженного файла.
+Используйте <a href="https://man.openbsd.org/signify">signify(1)</a>
+и <code>SHA256.sig</code> для криптографической проверки файла содержащего контрольные суммы.
 
 <pre class="cmdbox">
 $ <b>signify -Cp /etc/signify/openbsd-XX-base.pub -x SHA256.sig miniroot*.img</b>
@@ -258,7 +258,7 @@ minirootXX.img: OK
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
 <a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/openbsd-68-base.pub">открытого ключа</a>
-или быть установленым в другое место.
+или быть установлен в другое место.
 
 <p>
 Образы <code>installXX.iso</code> и <code>installXX.img</code> не содержат файл
@@ -269,10 +269,10 @@ minirootXX.img: OK
 Directory does not contain SHA256.sig. Continue without verification? [no]
 </pre>
 
-Это происходит из-за того, что мы не стали включать этот файл, потому что
+Это происходит из-за того, что мы не стали включать этот файл, так как
 установщику нет смысла проверять их. Если кто-то создаст мошеннический
 установочный образ, он конечно же сможет изменить установщик так, чтобы файлы
-были легитимными. Если подпись установочного образа была проверена заранее,
+были легитимны. Если подпись установочного образа была проверена ранее,
 можно с уверенностью ответить «да».
 
 <h2 id="MkInsMedia">Создание установочного носителя</h2>
@@ -318,7 +318,7 @@ GNU версия <code>dd</code> потребует <code>bs=1M</code> (обра
 
 <p>
 Установщик OpenBSD предназначен для установки системы с очень удобной
-конфигурацией по умолчанию при минимальных вмешательствах пользователя.
+конфигурацией по умолчанию с минимальным вмешательством пользователя.
 Вы можете просто нажимать <code>&lt;Enter&gt;</code>, чтобы получить правильно
 установленную OpenBSD, пробежавшись пальцами по клавиатуре только для ввода
 пароля root.
