--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -379,7 +379,7 @@ fontconfig, могут использоваться без X программ р
 Для простоты разработчики решили не поддерживать минимальный компонент
 <code>xbaseXX.tgz</code>, который позволял бы работать большинству не-X портов.
 
-<h3>Добавление компоненты после устновки</h3>
+<h3>Добавление компоненты после установки</h3>
 
 Если вы решили пропустить некоторые установочные компоненты в ходе установки
 системы, вы, возможно, позже все же передумаете. Для этого просто загрузитесь с
