--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -373,10 +373,10 @@ Welcome to the OpenBSD/amd64 X.X installation program.
 
 <p>
 Некоторые библиотеки из <code>xbaseXX.tgz</code>, такие как freetype или
-fontconfig, могут использоваться без X программ работающих с текстом
-или графикой. Такие программы обычно нуждаются в шрифтах, либо из
-<code>xfontXX.tgz</code>, либо из пакетов со шрифтами.
-Для простоты разработчики решили не поддерживать минимальный компонент
+fontconfig, используются программами для работы с текстом или графикой и без X.
+Такие программы обычно нуждаются в шрифтах из <code>xfontXX.tgz</code>
+или пакетов со шрифтами.
+Для простоты разработчики решили не поддерживать минимальный компонент 
 <code>xbaseXX.tgz</code>, который позволял бы работать большинству не-X портов.
 
 <h3>Добавление компоненты после установки</h3>
