[1.540] better wording - faq/faq4.html, #22

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -342,8 +342,7 @@ Welcome to the OpenBSD/amd64 X.X installation program.
 
 <h2 id="FilesNeeded">Набор устанавливаемых компонентов</h2>
 
-Для полная установка OpenBSD состоит из нескольких компонентов.
-Вот краткое их описание:
+Полная инсталляция OpenBSD разбита на несколько установочных компонент.
 
 <dl>
   <dt><code>bsd</code>
