[1.540] better wording - faq/faq4.html
some ideas for improved wording
https://github.com/openbsd-ru/openbsd-ru.github.io/pull/21

Thanks to https://github.com/ssh3

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -6,10 +6,6 @@ dt { margin-left: 40px; float: left; }
 dd { margin: 0 0 0 10em; }
 </style>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD FAQ: Руководство по установке</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +28,7 @@ FAQ - Руководство по установке
   <li><a href="#Download"    >Загрузка OpenBSD из Интернет</a>
   <li><a href="#MkInsMedia"  >Создание установочного носителя</a>
   <li><a href="#Install"     >Выполнение простой установки</a>
-  <li><a href="#FilesNeeded" >Набор устанавливаемых компонентов</a>
+  <li><a href="#FilesNeeded" >Набор устанавливаемых компонент</a>
   <li><a href="#Partitioning">Разметка диска</a>
   <li><a href="#SendDmesg"   >Отправка вашего dmesg после установки</a>
   <li><a href="#site"        >Настройка процесса установки</a>
@@ -187,9 +183,8 @@ boot> <b>boot hd1d:/bsd.rd</b>
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/octeon/miniroot68.img">octeon</a>]
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/miniroot68.img">sparc64</a>]
 <br>
-Это такой же образ, как и образ выше, но файлов, содержащих установочные компоненты,
-там нет. Они могут быть во время установки системы загруженны из сети или найдены на
-диске.
+Это такой же образ, как и выше, но без установочных компонент.
+Они загружаются из интернет или c локального диска.
 
 <p>
 <li>
@@ -203,7 +198,7 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <br>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
 <br>
-Содержит файлы с установочными компонентами.
+Содержит установочные компоненты.
 
 <p>
 <li>
@@ -215,7 +210,7 @@ ISO 9660 образ. Используется для создания устан
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/macppc/cd68.iso">macppc</a>]
 [<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/cd68.iso">sparc64</a>]
 <br>
-Такой же образ как и образ выше, но без файлов с установочными компонентами.
+Такой же образ как и выше, но без установочных компонент.
 
 <p>
 <li>
@@ -230,7 +225,7 @@ ISO 9660 образ. Используется для создания устан
 Образы могут быть загружены с альтернативных <a href="../ftp.html">зеркал</a>.
 
 <p>
-Файл <code>SHA256</code>, содержащий checksums, находится в том же каталоге,
+Файл <code>SHA256</code>, содержащий контрольные суммы, находится в том же каталоге,
 что и установочные файлы, перечисленные выше. Вы можете проверить, что ни один из
 загруженных файлов не был искажен при скачивании, используя команду
 <a href="https://man.openbsd.org/sha256">sha256(1)</a>.
@@ -248,8 +243,9 @@ minirootXX.img: OK
 </pre>
 
 Однако это используется лишь для проверки <i>правильной загрузки</i> файлов по сети.
-Вы можете использовать <a href="https://man.openbsd.org/signify">signify(1)</a>
-и файл <code>SHA256.sig</code> для криптографической проверки загруженного файла.
+Используйте <a href="https://man.openbsd.org/signify">signify(1)</a>
+и <code>SHA256.sig</code> для криптографической проверки файла, содержащего
+контрольные суммы.
 
 <pre class="cmdbox">
 $ <b>signify -Cp /etc/signify/openbsd-XX-base.pub -x SHA256.sig miniroot*.img</b>
@@ -260,7 +256,7 @@ minirootXX.img: OK
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
 <a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/openbsd-68-base.pub">открытого ключа</a>
-или может быть установлен в другом месте.
+или быть установлен в другое место.
 
 <p>
 Образы <code>installXX.iso</code> и <code>installXX.img</code> не содержат файл
@@ -271,10 +267,10 @@ minirootXX.img: OK
 Directory does not contain SHA256.sig. Continue without verification? [no]
 </pre>
 
-Это происходит из-за того, что мы не стали включать этот файл, потому что
+Это происходит из-за того, что мы не стали включать этот файл, так как
 установщику нет смысла проверять их. Если кто-то создаст мошеннический
 установочный образ, он конечно же сможет изменить установщик так, чтобы файлы
-были легитимными. Если подпись установочного образа была проверена заранее,
+были легитимны. Если подпись установочного образа была проверена ранее,
 можно с уверенностью ответить «да».
 
 <h2 id="MkInsMedia">Создание установочного носителя</h2>
@@ -314,15 +310,15 @@ GNU версия <code>dd</code> потребует <code>bs=1M</code> (обра
 
 <h2 id="Install">Выполнение простой установки</h2>
 
-Если вы ищете иструкции и другую информцию о процессе загрузки с того или
+Если вам необходимы инструкции и другая информация о процессе загрузки с того или
 иного устройства, загляните на страницу <a href="../plat.html">платформы</a>,
-где можно ознакомиться с возможностями для вашей машины.
+где можно ознакомиться с особенностями вашей машины.
 
 <p>
 Установщик OpenBSD предназначен для установки системы с очень удобной
-конфигурацией по умолчанию при минимальным вмешательством пользователя.
+конфигурацией по умолчанию с минимальным вмешательством пользователя.
 Вы можете просто нажимать <code>&lt;Enter&gt;</code>, чтобы получить правильно
-установленную OpenBSD, пробежавшиь пальцами по клавиатуре только для ввода
+установленную OpenBSD, пробежавшись пальцами по клавиатуре только для ввода
 пароля root.
 
 <p>
@@ -338,9 +334,9 @@ Welcome to the OpenBSD/amd64 X.X installation program.
 (I)nstall, (U)pgrade, (A)utoinstall or (S)hell?
 </pre>
 
-Выберете <code>(I)nstall</code> для начала процесса установки.
+Выберите <code>(I)nstall</code> для начала процесса установки.
 
-<h2 id="FilesNeeded">Набор устанавливаемых компонентов</h2>
+<h2 id="FilesNeeded">Набор устанавливаемых компонент</h2>
 
 Полная инсталляция OpenBSD разбита на несколько установочных компонент.
 
@@ -358,7 +354,7 @@ Welcome to the OpenBSD/amd64 X.X installation program.
   <dt><code>manXX.tgz</code>
     <dd>Справочные man-страницы
   <dt><code>gameXX.tgz</code>
-    <dd>Консольные игры (Text-based games)
+    <dd>Консольные игры (text-based games)
   <dt><code>xbaseXX.tgz</code>
     <dd>Основные библиотеки и утилиты для X11
         (требует <code>xshareXX.tgz</code>)
@@ -374,19 +370,19 @@ Welcome to the OpenBSD/amd64 X.X installation program.
 
 <p>
 Некоторые библиотеки из <code>xbaseXX.tgz</code>, такие как freetype или
-fontconfig, могут использоваться без X программами, которые работают с текстом
-или графикой. Такие программы обычно нуждаются в шрифтах, либо из
-<code>xfontXX.tgz</code>, либо из пакетов со шрифтами.
+fontconfig, используются программами для работы с текстом или графикой и без X.
+Такие программы обычно нуждаются в шрифтах из <code>xfontXX.tgz</code>
+или пакетов со шрифтами.
 Для простоты разработчики решили не поддерживать минимальный компонент
 <code>xbaseXX.tgz</code>, который позволял бы работать большинству не-X портов.
 
-<h3>Добавление компонента после устновки</h3>
+<h3>Добавление компоненты после установки</h3>
 
-Если вы решили пропустить некоторые установочные компоненты во время установки
+Если вы решили пропустить некоторые установочные компоненты в ходе установки
 системы, вы, возможно, позже все же передумаете. Для этого просто загрузитесь с
 <a href="#bsd.rd">bsd.rd</a> и выберите <code>(U)pgrade</code>.
-Когда вы, ответив предворительно на несколько вопросов, наконец перейдете к выбору
-установочных компонентов, выберите те, которые вы хотите доустановить.
+Когда вы, предварительно ответив на несколько вопросов, наконец перейдете к выбору
+установочных компонент, выберите те, что хотите доустановить.
 
 <h2 id="Partitioning">Разметка диска</h2>
 
