[1.747] adding link to download page - index.html

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 первоначально написанную для OpenBSD.
 
 <p>
-Информацию по поводу того как скачать OpenBSD
-можно найти на станице download.
+OpenBSD доступна для скачивания с нашей
+<a href="faq/faq4.html#Download">страницы загрузок</a>.
 
 <p>
 Последняя версия,
