[1.353] update html lang tag - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang=en id=project-main>
+<html lang=ru id=project-main>
 	<meta charset=utf-8>
 	<title>OpenSSH</title>
 	<meta name="description" content="the main OpenSSH page">
