--- a/openssh/manual.html
+++ b/openssh/manual.html
@@ -10,7 +10,7 @@
 
 
 <h2 id=OpenBSD>
-<a href="/">
+<a href="index.html">
 <i>Open</i><b>SSH</b></a>
 man-руководства
 </h2>
@@ -22,107 +22,116 @@ OpenBSD man-страницы, доступные online, для нижепере
 
 <ul>
 <li><a href="https://man.openbsd.org/ssh">ssh(1)</a>
-     &mdash; The basic rlogin/rsh-like client program
+     &mdash; Базовая клиентская программа, похожая на rlogin/rsh
 <li><a href="https://man.openbsd.org/sshd">sshd(8)</a>
-     &mdash; The daemon that permits you to log in
+     &mdash; Демон, разрешающий вам войти в систему
 <li><a href="https://man.openbsd.org/ssh_config">ssh_config(5)</a>
-     &mdash; The client configuration file
+     &mdash; Файл конфигурации клиента
 <li><a href="https://man.openbsd.org/sshd_config">sshd_config(5)</a>
-     &mdash; The daemon configuration file
+     &mdash; Файл конфигурации демона 
 <li><a href="https://man.openbsd.org/ssh-agent">ssh-agent(1)</a>
-     &mdash; An authentication agent that can store private keys
+     &mdash; Агент аутентификации, который может хранить private ключи 
 <li><a href="https://man.openbsd.org/ssh-add">ssh-add(1)</a>
-     &mdash; Tool which adds keys to in the above agent
+     &mdash; Инструмент, который добавляет ключи в указанный выше агент
 <li><a href="https://man.openbsd.org/sftp">sftp(1)</a>
-     &mdash; FTP-like program that works over SSH1 and SSH2 protocol
+     &mdash; FTP-подобная программа, работающая по протоколам SSH1 и SSH2
 <li><a href="https://man.openbsd.org/scp">scp(1)</a>
-     &mdash; File copy program that acts like rcp
+     &mdash; Программа копирования файлов, которая работает как rcp
 <li><a href="https://man.openbsd.org/ssh-keygen">ssh-keygen(1)</a>
-     &mdash; Key generation tool
+     &mdash; Инструмент генерации ключей
 <li><a href="https://man.openbsd.org/sftp-server">sftp-server(8)</a>
-     &mdash; SFTP server subsystem (started automatically by sshd)
+     &mdash; Подсистема сервера SFTP (запускается автоматически при помощи sshd)
 <li><a href="https://man.openbsd.org/ssh-keyscan">ssh-keyscan(1)</a>
-     &mdash; Utility for gathering public host keys from a number of hosts
+     &mdash; Утилита для сбора public ключей хоста с нескольких хостов
 <li><a href="https://man.openbsd.org/ssh-keysign">ssh-keysign(8)</a>
-     &mdash; Helper program for host-based authentication
+     &mdash; Программа-помощник для хост-аутентификации (host-based authentication)
 </ul>
 
 <p>
-The SSH2 protocol implemented in OpenSSH is
-standardized by the IETF
+Протокол SSH2, реализованный в OpenSSH, стандартизирован рабочей группой IETF
 <a href="https://www.ietf.org/html.charters/secsh-charter.html">secsh</a>
-working group and is specified in several RFCs and drafts.
-The overall structure of SSH2 is described in the
-<a href="https://www.ietf.org/rfc/rfc4251.txt">architecture</a> RFC.
-It is composed of three layered components:
+и определен в нескольких RFC и drafts.
+Общая структура SSH2 описана в RFC
+<a href="https://www.ietf.org/rfc/rfc4251.txt">architecture</a>.
+Он состоит из компонентов трех уровней:
 
 <ul>
 <li>
-The 
-<a href="https://www.ietf.org/rfc/rfc4253.txt">transport layer</a>
-provides algorithm negotiation and a key exchange.
-The key exchange includes server authentication and
-results in a cryptographically secured connection:
-it provides integrity, confidentiality and optional compression.
+<a href="https://www.ietf.org/rfc/rfc4253.txt">
+Транспортный уровень (transport layer)</a>
+обеспечивает согласование алгоритмов и обмен ключами.
+Обмен ключами включает аутентификацию сервера и устанавливает
+криптографически защищенноe соединение: обеспечивается целостность,
+конфиденциальность и дополнительное сжатие. 
 
 <li>
-The 
-<a href="https://www.ietf.org/rfc/rfc4252.txt">user authentication layer</a>
-uses the established connection and relies on the services provided
-by the transport layer.
-It provides several mechanisms for user authentication.
-These include traditional password authentication as well as public-key
-or host-based authentication mechanisms.
+<a href="https://www.ietf.org/rfc/rfc4252.txt">
+Уровень аутентификации (user authentication layer)</a>
+использует установленное соединение и полагается на услуги,
+предоставляемые транспортным уровнем.
+Он предоставляет несколько механизмов для аутентификации
+пользователей. К ним относятся традиционная аутентификация по
+паролю, а также механизмы аутентификации при помощи открытого
+ключа или на основе хоста (host-based authentication mechanisms).
 
-<li> The 
-<a href="https://www.ietf.org/rfc/rfc4254.txt">connection layer</a>
-multiplexes many different concurrent channels over the authenticated connection
-and allows tunneling of login sessions and TCP-forwarding.
-It provides a flow control service for these channels.
-Additionally, various channel-specific options can be negotiated.
+<li>
+<a href="https://www.ietf.org/rfc/rfc4254.txt">
+Уровень соединения (connection layer)</a>
+создает (мультиплексирует) множество различных параллельных
+каналов через аутентифицированное соединение и позволяет
+туннелировать сеансы входа в систему и TCP-forwarding.
+Он предоставляет услугу управления соединения (flow control
+service) для этих каналов. Кроме того, на этом уровне можно
+согласовать различные параметры, зависящие от канала.
 </ul>
 
 <p>
 Дополнительные документы спецификаций:
 
 <ul>
-<li> The
-<a href="https://www.ietf.org/rfc/rfc4256.txt">interactive
-authentication</a>
-RFC provides support for new authentication schemes like S/Key
-or TIS authentication.
+<li>RFC4256, посвященный
+<a href="https://www.ietf.org/rfc/rfc4256.txt">
+интерактивной аутентификации</a>, описывает поддержку новых
+схем аутентификации, таких как S/Key или TIS.
 
-<li> The SFTP file transfer protocol is specified in the
-<a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-filexfer-02.txt">filexfer</a> draft.
-OpenSSH implements a SFTP
-<a href="https://man.openbsd.org/sftp">client</a> and
-<a href="https://man.openbsd.org/sftp-server">server</a>.
+<li>Протокол передачи файлов SFTP описан в черновике
+<a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-filexfer-02.txt">filexfer</a>.
+В OpenSSH реализован
+<a href="https://man.openbsd.org/sftp">клиент</a> и
+<a href="https://man.openbsd.org/sftp-server">сервер</a> SFTP.
 
-<li> A file format for public keys is specified in the 
-<a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-publickeyfile-02.txt">publickeyfile</a> draft.
-The command
-<a href="https://man.openbsd.org/ssh-keygen">ssh-keygen(1)</a> can be used
-to convert an OpenSSH public key to this file format.
+<li>Формат файла для public ключей указан в draft
+<a href="https://www.openbsd.org/openssh/txt/draft-ietf-secsh-publickeyfile-02.txt">publickeyfile</a>.
+Команда
+<a href="https://man.openbsd.org/ssh-keygen">ssh-keygen(1)</a>
+может использоваться для преобразования public ключа
+OpenSSH в этот формат файла.
 
-<li> The
-<a href="https://www.ietf.org/rfc/rfc4419.txt">Diffie-Hellman Group Exchange</a> allows clients to request more secure groups for the Diffie-Hellman key exchange.
+<li>
+<a href="https://www.ietf.org/rfc/rfc4419.txt">Diffie-Hellman Group Exchange</a>
+позволяет клиентам запрашивать более безопасные группы
+для обмена ключами Диффи-Хеллмана.
 
-<li>OpenSSH implemented a compression method "zlib@openssh.com" that delays
-    starting compression until after user authentication, to eliminate the
-    risk of pre-authentication attacks against the compression code. It is
-    described in
+<li>В OpenSSH реализован метод сжатия «zlib@openssh.com»,
+    который откладывает запуск сжатия до завершения аутентификации
+    пользователя, чтобы исключить риск атак предварительной
+    аутентификации на код сжатия.
+    Это описано в
     <a href="https://www.openbsd.org/openssh/txt/draft-miller-secsh-compression-delayed-00.txt">draft-miller-secsh-compression-delayed-00.txt</a>.
 
-<li>OpenSSH implements an additional MAC (Message Authentication Code) 
-    "umac-64@openssh.com", which has superior performance to the ones specified
-    in RFC 4253. It is described in
+<li>OpenSSH реализует дополнительный MAC
+    (Message Authentication Code, код аутентификации сообщения)
+    «umac-64@openssh.com», который имеет более высокую
+    производительность, чем те, которые указаны в RFC4253.
+    Он описан в
     <a href="https://www.openbsd.org/openssh/txt/draft-miller-secsh-umac-01.txt">draft-miller-secsh-umac-01.txt</a>.
 
-<li>The authentication agent protocol used by
-    <a href="https://man.openbsd.org/ssh-agent">ssh-agent</a> is documented in the
-    <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL.agent?rev=HEAD">PROTOCOL.agent</a> file.
+<li>Протокол агента аутентификации, используемый
+    <a href="https://man.openbsd.org/ssh-agent">ssh-agent</a>,
+    задокументирован в файле
+    <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL.agent?rev=HEAD">PROTOCOL.agent</a>.
 
-<li>OpenSSH makes various other minor extensions to and divergences from the
-    standard SSH protocols. These are documented in the
-    <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL?rev=HEAD">PROTOCOL</a> file.
+<li>OpenSSH имеет другие незначительные расширения и отклонения
+    от стандартных протоколов SSH. Они задокументированы в файле
+    <a href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL?rev=HEAD">PROTOCOL</a>.
 </ul>
