[1.823] sync, 6.8 - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -44,7 +44,7 @@
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/6.7/</b><br>
+<li><b>/pub/OpenBSD/6.8/</b><br>
 	Где можно найти последний релиз.
   <ul>
   <li><b>alpha/</b>
@@ -61,6 +61,7 @@
   <li><b>packages/</b><br>
 	Бинарные пакеты (скомпилированные порты) для установки в
 	-release или -stable системах.
+  <li><b>powerpc64/</b>
   <li><b>sgi/</b>
   <li><b>sparc64/</b>
   <li><b>src.tar.gz</b><br>
@@ -81,8 +82,8 @@
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/6.6/</b><br>
-	Такая же структура каталогов как и для релиза 6.7, описанного выше.
+<li><b>/pub/OpenBSD/6.7/</b><br>
+	Такая же структура каталогов как и для релиза 6.8, описанного выше.
 </ul>
 
 <h3 id="prospective">Информация для планируемых/поддерживаемых зеркал</h3>
