[1.425] sync, OpenBGPD 6.8p1 - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 6.7p0 состоялся 19 мая 2020 года.
+Релиз портированной версии OpenBGPD 6.8p1 состоялся 5 ноября 2020 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
@@ -33,8 +33,8 @@
 
 <ul>
 	<li>OpenBSD
-	<li>Linux (Debian 9, Ubuntu 14.04)
-	<li>FreeBSD (12.x)
+	<li>Linux (Debian, Ubuntu, Alpine)
+	<li>FreeBSD
 </ul>
 
 <p>
