--- a/arm64.html
+++ b/arm64.html
@@ -140,6 +140,10 @@ firmware). Обе группы устройств и ACPI поддерживаю
 Возможно, потребуется обновить дерево поддерживаемых устройств, чтобы использовать
 OpenBSD на этих машинах.
 
+<p>
+Не забывайте, что Raspberry Pi 3 модели B+ отличается от первоночальной Raspberry Pi 3;
+некоторые важные компоненты (devices) на B+ <b>НЕ</b> поддеживаются.
+
 <h4>Ethernet</h4>
 <ul>
 	<li><a href="https://man.openbsd.org/arm64/bse.4">bse(4)</a>
@@ -157,7 +161,7 @@ OpenBSD на этих машинах.
 <h4>802.11 wireless</h4>
 <ul>
 	<li><a href="https://man.openbsd.org/arm64/bwfm.4">bwfm(4)</a>
-	  на Raspberry Pi 3 и Pinebook Pro
+	  на Raspberry Pi 3/4 и Pinebook Pro
 </ul>
 
 <h4>Storage</h4>
@@ -169,7 +173,7 @@ OpenBSD на этих машинах.
 	<li><a href="https://man.openbsd.org/arm64/dwmmc.4">dwmmc(4)</a>
 	  на Rockchip RK3328/RK3399
 	<li><a href="https://man.openbsd.org/arm64/sdhc.4">sdhc(4)</a>
-	  на Rockchip RK3399
+	  на Rockchip RK3399 и Raspberry Pi 4
 	<li><a href="https://man.openbsd.org/arm64/sximmc.4">sximmc(4)</a>
 	  на Allwinner A64/H5
 </ul>
