--- a/openssh/index.html
+++ b/openssh/index.html
@@ -54,8 +54,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.4">OpenSSH 8.4</a>
-состоялся 27 сентября 2020 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.5">OpenSSH 8.5</a>
+состоялся 3 марта 2021 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
