--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -36,6 +36,35 @@ h3 {
 Нижеперечисленные версии OpenSSH можно использовать в OpenBSD:
 
 <ul>
+
+<li><h3>OpenSSH 8.5: 3 марта 2021</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.5.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.5.tar.gz</a>
+
+<p>
+Если вы устанавливаете OpenSSH 8.5 на OpenBSD 6.7,
+вам понадобится этот патч:<br>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd67_8.5.patch">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd67_8.5.patch</a>
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-8.5.tar.gz
+# cd ssh
+# patch &lt; /path/to/openbsd67_8.5.patch # if on OpenBSD 6.7
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh
+</pre>
+
+<p>
+и перезапустите sshd.
+
 <li><h3>OpenSSH 8.4: 27 сентября 2020 года</h3>
 
 <p>
