--- a/faq/faq13.html
+++ b/faq/faq13.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="../favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
-<link rel="canonical" href="https://www.openbsd.org/faq/faq13.html">
+<link rel="canonical" href="https://openbsd-ru.github.io/faq/faq13.html">
 <style>
 table {
   border-collapse: collapse;
