[1.285] sync: s/fs/img - amd64.html

--- a/amd64.html
+++ b/amd64.html
@@ -131,11 +131,11 @@ OpenBSD/amd64 работает на процессорах семейства AM
   и клавиатурa).<br>
   Список свежих драйверов этого образа можно найти в файле конфигурации ядра
   <a href="https://cvsweb.openbsd.org/src/sys/arch/amd64/conf/RAMDISK_CD?rev=HEAD">RAMDISK_CD</a>
-  <li><strong>Образ диска</strong> (minirootXX.fs)
+  <li><strong>Образ диска</strong> (minirootXX.img)
   <br>
   Тот же установщик, что и CD ISO образ, но в форме, подходящей для создания
   загружаемых жестких дисков или USB накопителей.
-  <li><strong>Дискета A</strong> (floppyXX.fs)
+  <li><strong>Дискета A</strong> (floppyXX.img)
   <br>
   Этот образ дискеты размером 1,44 МБ содержит наиболее распространенные
   драйверы. Он создан для наиболее типичного ПК. Как правило,
