[1.65] fix link to changelog - openssh/security.html

--- a/openssh/security.html
+++ b/openssh/security.html
@@ -39,7 +39,7 @@ OpenSSH разрабатывается по тем же принципам и т
     checking and double-free protection in malloc(3).
     Этот баг был исправлен в OpenSSH 8.5
     Более подробную информацию по этому поводу можно прочитать в
-    <a href="txt/release-8.5">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-8.5">release notes</a>.
 
 <li><p><b>3 октября 2017</b><br>
     Все версии OpenSSH до 7.6 поддерживают режим только для чтения в sftp-сервере
