--- a/errata.html
+++ b/errata.html
@@ -78,4 +78,6 @@
 <a href="https://www.openbsd.org/errata65.html">6.5</a>,
 <a href="https://www.openbsd.org/errata66.html">6.6</a>,
 <a href="https://www.openbsd.org/errata67.html">6.7</a>,
-<a href="https://www.openbsd.org/errata68.html">6.8</a>.
+<br>
+<a href="https://www.openbsd.org/errata68.html">6.8</a>,
+<a href="https://www.openbsd.org/errata69.html">6.9</a>.
