[1.134] sync - openssh/openbsd.html

--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -22,8 +22,8 @@ h3 {
 <hr>
 
 <p>
-С тех пор как OpenSSH разрабатывается группой OpenBSD, она
-представляет собой базовый компонент ОС, начиная с версии 2.6.
+С тех пор как OpenSSH разрабатывается группой хакеров OpenBSD,
+она является неотъемлемой частью системы (начиная с версии 2.6).
 Таким образом, вам не придется её дополнительно устанавливать.
 Однако, в связи с периодическим добавлением новых возможностей
 или просто исправлений, вам, возможно, понадобится её обновить.
