[1.26] sync, rpki-client 7.0 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -6,7 +6,7 @@
 <meta name="description" content="rpki-client Portable Release">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.rpki-client.org/portable.html">
+<link rel="canonical" href="https://www.rpki-client.org/portable.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 6.8p1 вышла 12 ноября 2020 года.
+Портированная версия rpki-client 7.0 вышла 15 апреля 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -38,7 +38,8 @@
 <ul>
 	<li>OpenBSD
 	<li>Linux (Alpine 3.12, Debian 9, Debian 10, Fedora 31, Fedora 32, Fedora 33, RHEL/CentOS 7, RHEL/CentOS 8)
-	<li>...
+	<li>macOS Catalina
+	<li>Windows Subsystem for Linux 2
 </ul>
 
 <p>
@@ -46,6 +47,11 @@ rpki-client может работать и на других ОС, более н
 вышеперечисленные регулярно тестируются разработчиками. Отчеты (успех или нет)
 приветствуются. Вы можете сообщить об ошибках или отправлять pull request в
 <a href="https://github.com/rpki-client/rpki-client-portable">проект на GitHub</a>.
+
+<p>
+Архивы с исходниками релизов подписаны (сигнированы) при помощи
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/RELEASE_KEY.asc">этого PGP public ключа.</a>.
+(B5B6416FEA6DDA05EA562A9FCB987F2783972FF9)
 
 <hr>
 
