--- a/security.html
+++ b/security.html
@@ -75,7 +75,8 @@ h3 {
 <a href="https://openbsd.org/errata65.html">6.5</a>,
 <a href="https://openbsd.org/errata66.html">6.6</a>,
 <a href="https://openbsd.org/errata67.html">6.7</a>,
-<a href="https://openbsd.org/errata68.html">6.8</a>.
+<a href="https://openbsd.org/errata68.html">6.8</a>,
+<a href="https://openbsd.org/errata69.html">6.9</a>.
 <br>
 <hr>
 
