[1.355] sync, OpenSSH 8.6 - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -54,8 +54,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.5">OpenSSH 8.5</a>
-состоялся 3 марта 2021 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.6">OpenSSH 8.6</a>
+состоялся 19 апреля 2021 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
